fixed Typekit issue, the nav transition bug, and eliminated overflow from body so that the scroll bar shows up

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -568,7 +568,7 @@ h2 {
 				}
 			}
 
-			li:hover {
+			li:hover:not(.page_displayed) {
 				height: 40px;
 			}
 
